crates/compiler/codegen/tests/snapshots/codegen_tests__arithmetic_add_two_numbers.snap
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: add_two_numbers.cm
============================================================
Source code:
fn add_two_numbers() -> felt {
    let a = 10;
    let b = 32;
    return a + b;
}

============================================================
Generated CASM:
add_two_numbers:
add_two_numbers:
add_two_numbers_0:
   0: 9 10 0 _             // Store immediate: [fp + 0] = 10
   1: 9 32 1 _             // Store immediate: [fp + 1] = 32
   2: 0 0 1 -3             // [fp + -3] = [fp + 0] op [fp + 1]
   3: 11 _ _ _             // return
