crates/compiler/codegen/tests/snapshots/codegen_tests__arithmetic_and.snap
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: and.cm
============================================================
Source code:
fn simple_and() -> felt {
    let x = 10;
    let y = 20;
    let z = x && y;
    return z;
}

============================================================
Generated CASM:
simple_and:
simple_and:
simple_and_0:
   0: 6 10 _ 0             // Store immediate: [fp + 0] = 10
   1: 6 20 _ 1             // Store immediate: [fp + 1] = 20
   2: 7 0 1 -3             // [fp + -3] = [fp + 0] op [fp + 1]
   3: 15 -3 3 _            // if [fp + -3] != 0, jump to and_non_zero_0
   4: 6 0 _ -3             // [fp + -3] = 0
   5: 13 7 _ _             // jump to and_end_1
and_non_zero_0:
   6: 6 1 _ -3             // [fp + -3] = 1
and_end_1:
   7: 12 _ _ _             // return
