crates/compiler/codegen/tests/snapshots/codegen_tests__arithmetic_left_imm.snap
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: left_imm.cm
============================================================
Source code:
func with_left_imm() -> felt {
    let x = 1+1;
    let y = 2*x;
    let z = 20/x;
    return z;
}

============================================================
Generated CASM:
with_left_imm:
with_left_imm:
with_left_imm_0:
   0: 6 2 _ 0              // [fp + 0] = 2
   1: 4 0 _ 1              // Store: [fp + 1] = [fp + 0]
   2: 8 1 2 2              // [fp + 2] = 2 op [fp + 1]
   3: 6 20 _ 1             // [fp + 1] = 20
   4: 9 1 1 3              // [fp + 3] = [fp + 1] op [fp + 1]
   5: 4 3 _ 4              // Store: [fp + 4] = [fp + 3]
   6: 4 4 _ -3             // Return value: [fp - 3] = [fp + 4]
   7: 15 _ _ _             // return
