crates/compiler/codegen/tests/snapshots/codegen_tests__arithmetic_subtract_numbers.snap
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: subtract_numbers.cm
============================================================
Source code:
fn subtract_numbers() -> felt {
    let a = 100;
    let b = 25;
    return a - b;
}

============================================================
Generated CASM:
subtract_numbers:
subtract_numbers:
subtract_numbers_0:
   0: 9 100 _ 0            // Store immediate: [fp + 0] = 100
   1: 9 25 _ 1             // Store immediate: [fp + 1] = 25
   2: 1 0 1 -3             // [fp + -3] = [fp + 0] op [fp + 1]
   3: 11 _ _ _             // return
