crates/compiler/codegen/tests/snapshots/codegen_tests__control_flow_complex_condition.snap
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: complex_condition.cm
============================================================
Source code:
fn complex_condition() -> felt {
    let x = 10;
    let y = 5;
    let cond = x == 2 && y != 3;
    if (cond || x == y){
        return 0;
    } else {
        return 1;
    }
}

============================================================
Generated CASM:
complex_condition:
complex_condition:
complex_condition_0:
   0: 9 10 _ 0             // Store immediate: [fp + 0] = 10
   1: 9 5 _ 1              // Store immediate: [fp + 1] = 5
   2: 5 0 2 2              // [fp + 2] = [fp + 0] op 2
   3: 14 2 3 _             // if [fp + 2] != 0, jump to not_zero_0
   4: 9 1 _ 2              // [fp + 2] = 1
   5: 12 7 _ _             // jump to end_1
not_zero_0:
   6: 9 0 _ 2              // [fp + 2] = 0
end_1:
   7: 5 1 3 3              // [fp + 3] = [fp + 1] op 3
   8: 14 3 3 _             // if [fp + 3] != 0, jump to neq_non_zero_2
   9: 9 0 _ 3              // [fp + 3] = 0
  10: 12 12 _ _            // jump to neq_end_3
neq_non_zero_2:
  11: 9 1 _ 3              // [fp + 3] = 1
neq_end_3:
  12: 2 2 3 4              // [fp + 4] = [fp + 2] op [fp + 3]
  13: 14 4 3 _             // if [fp + 4] != 0, jump to and_non_zero_4
  14: 9 0 _ 4              // [fp + 4] = 0
  15: 12 17 _ _            // jump to and_end_5
and_non_zero_4:
  16: 9 1 _ 4              // [fp + 4] = 1
and_end_5:
  17: 1 0 1 5              // [fp + 5] = [fp + 0] op [fp + 1]
  18: 14 5 3 _             // if [fp + 5] != 0, jump to not_zero_6
  19: 9 1 _ 5              // [fp + 5] = 1
  20: 12 22 _ _            // jump to end_7
not_zero_6:
  21: 9 0 _ 5              // [fp + 5] = 0
end_7:
  22: 9 0 _ 6              // Initialize OR result to 0
  23: 14 4 3 _             // if [fp + 4] != 0, jump to or_true_8
  24: 14 5 2 _             // if [fp + 5] != 0, jump to or_true_8
  25: 12 27 _ _            // jump to or_end_9
or_true_8:
  26: 9 1 _ 6              // [fp + 6] = 1
or_end_9:
  27: 14 6 2 _             // if [fp + 6] != 0 jmp rel complex_condition_1
  28: 12 31 _ _            // jump abs complex_condition_2
complex_condition_1:
  29: 9 0 _ -3             // Return value 0: [fp -3] = 0
  30: 11 _ _ _             // return
complex_condition_2:
  31: 9 1 _ -3             // Return value 0: [fp -3] = 1
  32: 11 _ _ _             // return
