crates/compiler/codegen/tests/snapshots/codegen_tests__control_flow_if_else.snap
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: if_else.cm
============================================================
Source code:
func test_if_else(x: felt) -> felt {
    if (x == 0) {
        return 1;
    } else {
        return 2;
    }
}
============================================================
Generated CASM:
test_if_else:
test_if_else:
test_if_else_0:
   0: 31 -4 4 _            // if [fp + -4] != 0 jmp rel test_if_else_2
   1: 20 2 _ _             // jump abs test_if_else_1
test_if_else_1:
   2: 6 1 _ -3             // Return value 0: [fp -3] = 1
   3: 15 _ _ _             // return
test_if_else_2:
   4: 6 2 _ -3             // Return value 0: [fp -3] = 2
   5: 15 _ _ _             // return
