crates/compiler/codegen/tests/snapshots/codegen_tests__control_flow_if_else_with_merge.snap
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: if_else_with_merge.cm
============================================================
Source code:
func test_if_else(x: felt) -> felt {
    let y = 0;
    if (x == 0) {
        y = 1;
    } else {
        y = 2;
    }
    return y;
}
============================================================
Generated CASM:
test_if_else:
test_if_else:
test_if_else_0:
   0: 6 0 _ 0              // Store immediate: [fp + 0] = 0
   1: 31 -4 4 _            // if [fp + -4] != 0 jmp rel test_if_else_2
   2: 20 3 _ _             // jump abs test_if_else_1
test_if_else_1:
   3: 6 1 _ 0              // Store immediate: [fp + 0] = 1
   4: 20 6 _ _             // jump abs test_if_else_3
test_if_else_2:
   5: 6 2 _ 0              // Store immediate: [fp + 0] = 2
test_if_else_3:
   6: 4 0 _ -3             // Return value 0: [fp -3] = [fp + 0]
   7: 15 _ _ _             // return
